# MandelbrotWorks

./: CMakeLists.txt  README.md  comand.txt
libs/: CMakeLists.txt
modules/: CMakeLists.txt
modules/calculator/: CMakeLists.txt
modules/calculator/include/: mandelbrot_works.hpp
modules/calculator/src/: main.cpp  mandelbrot_works.cpp
